Fixed loginForm container overflow

--- a/webapp/src/components/LoginForm/loginForm.module.css
+++ b/webapp/src/components/LoginForm/loginForm.module.css
@@ -1,14 +1,14 @@
 .container {
+    flex-grow: 1;
     display: flex;
-    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
 .loginForm {
+    margin-top: -40px;
     display: flex;
     flex-direction: column;
-    margin-top: -200px;
     padding: 20px 15px;
     background: #FFF;
     border-radius: 5px;
